# miden-private-transport

./: Cargo.toml  Makefile  README.md
crates/client/: Cargo.toml
crates/client/src/: grpc.rs  lib.rs  types.rs
crates/client/src/database/: mod.rs  sqlite.rs
crates/client/tests/: common.rs  test_transport_basic.rs  test_transport_client_state.rs  test_transport_key_exchange.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  logging.rs  metrics.rs  types.rs
crates/node/src/database/: maintenance.rs  mod.rs  sqlite.rs
crates/node/src/node/: grpc.rs  mod.rs
crates/proto/: miden-private-transport.proto
docs/: book.toml
docs/src/: index.md
docs/src/developer/: codebase.md  components.md  index.md
docs/src/operator/: architecture.md  index.md  installation.md  monitoring.md  usage.md  versioning.md
docs/src/user/: rpc.md
