[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Client"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["messaging", "miden"]
license.workspace      = true
name                   = "miden-private-transport-client"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Proto
miden-private-transport-proto = { workspace = true }

# Miden
miden-lib     = "0.10"
miden-objects = { workspace = true }
miden-testing = "0.10"

# gRPC server and client
tokio = { workspace = true }
tonic = { workspace = true }
tower = { features = ["timeout"], version = "0.5" }

# Serialization
serde      = { features = ["derive"], version = "1.0" }
serde_json = "1.0"

# Protobuf
prost-types = "0.13"

# Database
sqlx = { features = ["runtime-tokio-rustls", "sqlite"], version = "0.8" }

# Logging
opentelemetry         = { version = "0.30" }
opentelemetry-otlp    = { default-features = false, features = ["grpc-tonic", "tls-roots", "trace"], version = "0.30" }
opentelemetry_sdk     = { features = ["rt-tokio", "testing"], version = "0.30" }
tracing               = { workspace = true }
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber    = { workspace = true }

# Error handling
anyhow    = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { features = ["serde"], version = "0.4" }

# Generic
rand = "0.9"

[dev-dependencies]
miden-private-transport-node = { workspace = true }
serial_test                  = "3.2"
