[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Node"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["messaging", "miden"]
license.workspace      = true
name                   = "miden-private-transport-node"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Proto crate
miden-private-transport-proto = { workspace = true }

# Miden
miden-objects = { workspace = true }

# gRPC server and client
tokio = { workspace = true }
tonic = { workspace = true }

# Serialization
serde      = { features = ["derive"], version = "1.0" }
serde_json = "1.0"

# Protobuf
prost-types = "0.13"

# Database
sqlx = { features = ["runtime-tokio-rustls", "sqlite"], version = "0.8" }

# Logging
opentelemetry = { version = "0.30" }
opentelemetry-otlp = { default-features = false, features = [
  "grpc-tonic",
  "metrics",
  "tls-roots",
  "trace",
], version = "0.30" }
opentelemetry_sdk = { features = ["metrics", "rt-tokio", "testing"], version = "0.30" }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { features = ["serde"], version = "0.4" }

# General
rand = "0.9"

[dev-dependencies]
serial_test = "3.2"
